add voice bot and changed language to En

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts/commands.js"></script>
+    <script src="scripts/textToSpeech.js"></script>
     <link rel="stylesheet" href="css/main.style.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <header>
-      <h5>Pro začátek řekni ahoj</h5>
+      <h5>Say HELLO to me</h5>
       <div class="results">
         <div id="textResult"></div>
       </div>
