added function for stop talking

--- a/README.html
+++ b/README.html
@@ -6,7 +6,8 @@
       <body>
         <h1 id="han">HAN</h1>
 <p>HAN - Home Assistant for Nerds</p>
-<p>There is only Czech language mutation</p>
+<p>There is only english language version</p>
+<p>There is testing <a href="https://osia-team.github.io/HAN/">demo</a></p>
 <h2 id="functions">Functions</h2>
 <ul>
 <li>Voice Control</li>
@@ -23,13 +24,13 @@
 <h2 id="available-voice-commands">Available Voice Commands</h2>
 <p>First of all you can say hi to HAN by</p>
 <ul>
-<li>Ahoj</li>
+<li>Hello</li>
 </ul>
-<p>You can search WIKI for definitions by command: &quot;definuj [stuf you want to search]&quot; for exapmle:</p>
+<p>You can search WIKI for definitions by command: &quot;tell me about [stuf you want to search]&quot; for exapmle:</p>
 <ul>
-<li>definuj Česko</li>
+<li>Tell me about Czech Republic</li>
 </ul>
-<p>This voice command returns wiki definition (first perex) of Česko on <a href="https://cs.wikipedia.org/wiki/%C4%8Cesko">czech mutation of wiki</a></p>
+<p>This voice command returns wiki definition (first perex) of <a href="https://cs.wikipedia.org/wiki/%C4%8Cesko">english mutation of wiki</a></p>
 
       </body>
     </html>
