--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts/commands.js"></script>
     <script src="scripts/textToSpeech.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/main.style.css">
     <meta charset="utf-8">
     <title></title>
@@ -20,7 +22,7 @@
 
 
     <div class="spokenForm">
-      <div id="youSaid"></div>
+      <i class="fas fa-microphone"></i><div id="youSaid"></div>
     </div>
   </body>
 </html>
